--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,6 +2,7 @@ ja:
   activerecord:
     models:
       member: 会員情報
+      article: ニュース記事
     attributes:
       member:
         number: 背番号
@@ -13,11 +14,19 @@ ja:
         birthday: 誕生日
         email: メールアドレス
         administrator: 管理者
+      article:
+        title: タイトル
+        body: 本文
+        released_at: 掲載開始日時
+        expired_at: 掲載終了日時
+        no_expiration: 掲載終了日時を設定しない
+        member_only: 会員限定
     errors:
       messages:
         header: "エラーがあります。"
         invalid: "の書式が正しくありません。"
         invalid_member_name: "は半角英数字で入力してください (_も使えます)。"
+        expired_at_too_old: は掲載開始日より新しい日時にしてください。
   time:
     formats:
       medium: "%Y年%m月%d日(%a) %H:%M"
