--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -14,6 +14,8 @@ ja:
         birthday: 誕生日
         email: メールアドレス
         administrator: 管理者
+        password: パスワード
+        password_confirmation: パスワードの確認
       article:
         title: タイトル
         body: 本文
@@ -30,3 +32,6 @@ ja:
   time:
     formats:
       medium: "%Y年%m月%d日(%a) %H:%M"
+  will_paginate:
+    previous_label: "前"
+    next_label: "次"
